<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.imed.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="100dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/imedname"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- TODO: Update blank fragment layout -->
        <android.support.design.widget.TextInputLayout
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progreessbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:theme="@style/AppTheme.ProgressBar"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/chk_show_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif-monospace"
            android:text="Show Password"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_log_in"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textSize="25sp" />

    </LinearLayout>


</FrameLayout>
